[gd_scene load_steps=4 format=3 uid="uid://b0xydnt21wgf"]

[ext_resource type="Script" uid="uid://bjro5dpk0bkpl" path="res://commons/primitives/line/line.gd" id="1_ejps8"]
[ext_resource type="PackedScene" uid="uid://c61oiq862w0x3" path="res://commons/primitives/point/grab_sphere_point_with_text.tscn" id="2_c0ogx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_550wj"]
top_radius = 0.01
bottom_radius = 0.01
height = 0.7

[node name="Line" type="Node3D"]

[node name="lineContainer" type="Node3D" parent="."]
script = ExtResource("1_ejps8")
line_thickness = 0.01
line_color = Color(0.788235, 0.462745, 0.996078, 1)

[node name="GrabSphere" parent="lineContainer" instance=ExtResource("2_c0ogx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0, 0)

[node name="GrabSphere2" parent="lineContainer" instance=ExtResource("2_c0ogx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0)

[node name="line" type="MeshInstance3D" parent="lineContainer"]
transform = Transform3D(-0.00396184, 0.999992, 0, -0.999992, -0.00396184, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_550wj")
skeleton = NodePath("../..")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.340571)
visible = false
